// file: pkg/web/proto/messages/file_upload.proto
// version: 1.1.0
// guid: 47f22269-7456-4237-b463-c287580f662d

edition = "2023";

package gcommon.v1.web;

import "google/protobuf/go_features.proto";
import "pkg/web/proto/gcommon/pkg/web/proto;webpb";
option features.(pb.go).api_level = API_OPAQUE;

// FileUpload message definition.
message FileUpload {
  // Name of the uploaded file
  string file_name = 1;

  // MIME type of the file
  MimeType content_type = 2;

  // Raw file bytes
  bytes data = 3;

  // Destination path on server
  string destination = 4;
}
